# openstack-cpp-client

./: CMakeLists.txt  Doxyfile  README  Servers.cpp  Servers.hpp  build.sh  https.hpp  json.hpp  main.cpp  openstack.cpp  openstack.hpp  servers.hpp  test.cpp  url.hpp
docs/html/: actions_8hpp.html  actions_8hpp_source.html  annotated.html  api_8hpp.html  api_8hpp_source.html  backup_8hpp.html  backup_8hpp_source.html  classes.html  classopenstack_1_1HTTPS-members.html  classopenstack_1_1HTTPS.html  classopenstack_1_1Openstack-members.html  classopenstack_1_1Openstack.html  classopenstack_1_1Servers-members.html  classopenstack_1_1Servers.html  classopenstack_1_1StreamReader-members.html  classopenstack_1_1StreamReader.html  classopenstack_1_1model_1_1Server-members.html  classopenstack_1_1model_1_1Server.html  classopenstack_1_1model_1_1Servers-members.html  classopenstack_1_1model_1_1Servers.html  classopenstack_1_1services_1_1HTTPS-members.html  classopenstack_1_1services_1_1HTTPS.html  classopenstack_1_1services_1_1Servers-members.html  classopenstack_1_1services_1_1Servers.html  classopenstack_1_1services_1_1StreamReader-members.html  classopenstack_1_1services_1_1StreamReader.html  classopenstack_1_1xml_1_1AbsoluteLimit-members.html  classopenstack_1_1xml_1_1AbsoluteLimit.html  classopenstack_1_1xml_1_1AbsoluteLimits-members.html  classopenstack_1_1xml_1_1AbsoluteLimits.html  classopenstack_1_1xml_1_1Action-members.html  classopenstack_1_1xml_1_1Action.html  classopenstack_1_1xml_1_1Address-members.html  classopenstack_1_1xml_1_1Address.html  classopenstack_1_1xml_1_1AddressList-members.html  classopenstack_1_1xml_1_1AddressList.html  classopenstack_1_1xml_1_1Addresses-members.html  classopenstack_1_1xml_1_1Addresses.html  classopenstack_1_1xml_1_1Addresses__-members.html  classopenstack_1_1xml_1_1Addresses__.html  (+308 more)
docs/html/search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_68.html  all_69.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_66.html  classes_68.html  classes_69.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_6f.html  classes_70.html  classes_72.html  classes_73.html  classes_75.html  classes_76.html  classes_77.html  enums_76.html  (+54 more)
docs/latex/: actions_8hpp.tex  annotated.tex  api_8hpp.tex  backup_8hpp.tex  classopenstack_1_1HTTPS.tex  classopenstack_1_1Openstack.tex  classopenstack_1_1Servers.tex  classopenstack_1_1StreamReader.tex  classopenstack_1_1model_1_1Server.tex  classopenstack_1_1model_1_1Servers.tex  classopenstack_1_1services_1_1HTTPS.tex  classopenstack_1_1services_1_1Servers.tex  classopenstack_1_1services_1_1StreamReader.tex  classopenstack_1_1xml_1_1AbsoluteLimit.tex  classopenstack_1_1xml_1_1AbsoluteLimits.tex  classopenstack_1_1xml_1_1Action.eps  classopenstack_1_1xml_1_1Action.tex  classopenstack_1_1xml_1_1Address.tex  classopenstack_1_1xml_1_1AddressList.tex  classopenstack_1_1xml_1_1Addresses.tex  classopenstack_1_1xml_1_1Addresses__.tex  classopenstack_1_1xml_1_1BackupOrResizeInProgress.tex  classopenstack_1_1xml_1_1BackupOrResizeInProgressAPIFault.eps  classopenstack_1_1xml_1_1BackupOrResizeInProgressAPIFault.tex  classopenstack_1_1xml_1_1BackupSchedule.tex  classopenstack_1_1xml_1_1BackupSchedule__.tex  classopenstack_1_1xml_1_1BadMediaType.tex  classopenstack_1_1xml_1_1BadMediaTypeAPIFault.eps  classopenstack_1_1xml_1_1BadMediaTypeAPIFault.tex  classopenstack_1_1xml_1_1BadMethod.tex  classopenstack_1_1xml_1_1BadMethodAPIFault.eps  classopenstack_1_1xml_1_1BadMethodAPIFault.tex  classopenstack_1_1xml_1_1BadRequest.tex  classopenstack_1_1xml_1_1BadRequestAPIFault.eps  classopenstack_1_1xml_1_1BadRequestAPIFault.tex  classopenstack_1_1xml_1_1BuildInProgress.tex  classopenstack_1_1xml_1_1BuildInProgressAPIFault.eps  classopenstack_1_1xml_1_1BuildInProgressAPIFault.tex  classopenstack_1_1xml_1_1CloudServersAPIFault.eps  classopenstack_1_1xml_1_1CloudServersAPIFault.tex  (+115 more)
json/: Servers.cpp  Servers.hpp
json_spirit/: CMakeLists.txt  json_spirit_reader_template.h  license.txt
lib/: url.hpp
model/: Server.hpp  ServerStub.cpp  ServerStub.hpp  Servers.cpp  Servers.hpp
net/: Servers.cpp  Servers.hpp
services/: converters.hpp  files.hpp  https.hpp  servers.hpp
tests/: CMakeLists.txt  main.cpp  test_json.cpp
tests/json/: README.txt
util/: metadata.hpp  url.cpp  url.hpp
xml/: actions.cpp  actions.hpp  actions.ipp  api.cpp  api.hpp  api.ipp  backup.cpp  backup.hpp  backup.ipp  build.sh  common.cpp  common.hpp  faults.cpp  faults.hpp  faults.ipp  flavor.cpp  flavor.hpp  image.cpp  image.hpp  ipgroup.cpp  ipgroup.hpp  ipgroup.ipp  limits.cpp  limits.hpp  server.cpp  server.hpp  server.ipp  version.cpp  version.hpp  version.ipp
xml/xsds/: server.xsd
xsd/: CMakeLists.txt  actions.cpp  actions.hpp  actions.ipp  api.cpp  api.hpp  backup.cpp  backup.hpp  backup.ipp  build.sh  common.cpp  common.hpp  common.ipp  faults.cpp  faults.hpp  faults.ipp  flavor.cpp  flavor.hpp  flavor.ipp  image.cpp  image.hpp  image.ipp  ipgroup.cpp  ipgroup.hpp  ipgroup.ipp  limits.cpp  limits.hpp  limits.ipp  server.cpp  server.hpp  server.ipp  version.cpp  version.hpp  version.ipp
xsd/xsds/: api.xsd
xsds/: api.xsd  common.xsd  server.xsd
